tests/fcode/errors/err_star_kind_modern.f90
subroutine bad(x)
  real*8 :: x
end subroutine bad
